# PBI-dashboard-creator

./: .readthedocs.yaml  README.md  pyproject.toml
.github/scripts/: update_toml.py
.github/workflows/: python-publish.yml
docs/: index.rst
docs/source/: conf.py
examples/: create_example_dashboard.py
source/: conf.py
src/PBI-dashboard-creator/: create_blank_dashboard.py
src/PBI_dashboard_creator/: __init__.py  add_ADLS_csv.py  add_background_image.py  add_data.py  add_local_csv.py  add_shape_map.py  add_text_box.py  add_tmdl.py  create_blank_dashboard.py  create_date_hrcy.py  create_new_chart.py  create_new_page.py  create_tmdl.py  custom_date_hr.py  generate_bin_measures.py  update_diagramLayout.py  update_model_file.py
src/PBI_dashboard_creator/dashboard_resources/blank_template.Report/definition/: report.json
src/PBI_dashboard_creator/dashboard_resources/blank_template.SemanticModel/definition/: model.tmdl
