[project]
name = "PBI-dashboard-creator"
version = "0.0.1"
authors = [
  { name="Russell Shean", email="russshean@gmail.com" },
]
description = "Automatically create PowerBI dashboards using the .pbir file type"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DOH-EPI-Coders/PBI-dashboard-creator"
Issues = "https://github.com/DOH-EPI-Coders/PBI-dashboard-creator/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"